# TerrainRenderer

./: CMakeLists.txt  README.md
shaders/: fragment_shader.glsl
src/: gl_utils.cpp  gl_utils.h  main.cpp  utils.cpp  utils.h
